main-fixed-overflow

--- a/styles/_media-desktop.scss
+++ b/styles/_media-desktop.scss
@@ -5,9 +5,6 @@
     background-image: url(../images/bg-desktop.svg);
     background-color: $clr-v;
     background-repeat: repeat-y;
-    // background-attachment: ;
-    // padding: 0 2em;
-    overflow: hidden;
   }
 
   .container {
